cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_127.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cfb_enc.c:50: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cfb_enc.c:50:5: Write of unused value
48.       iv = &(*ivec)[0];
49.       c2l(iv, v0);
50.       c2l(iv, v1);
          ^
51.       if (enc) {
52.           while (l >= (unsigned long)n) {
